welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:10: error: illegal start of statement
    		{else}
                 ^